prevent jumping of lines when zooming ace editor

--- a/src/ext.zed/zed.css
+++ b/src/ext.zed/zed.css
@@ -26,10 +26,10 @@
   right: 0px !important;
 }
 
-#zed-stage .ace_active-line {
+#zed-stage .ace_content {
   width: 100% !important;
 }
 
-#zed-stage .ace_content {
-  width: 100% !important;
+#zed-stage .ace_line {
+  height: 12px !important;
 }
